galeria medio funcional

--- a/MemoAnime/platforms/android/app/src/main/assets/www/index.html
+++ b/MemoAnime/platforms/android/app/src/main/assets/www/index.html
@@ -19,6 +19,7 @@
                 <a href="./Easy.html"><button type="button" class="btn btn-light btn-block">Fácil</button></a>
                 <a href="./Medium.html"><button type="button" class="btn btn-light btn-block">Medio</button></a>
                 <a href="./Hard.html"><button type="button" class="btn btn-light btn-block">Difícil</button></a>
+                <a href="./gallery.html"><button type="button" class="btn btn-light btn-block">Galería</button></a>
             </div>
         </div>           
     </body>
