--- a/MemoAnime/platforms/android/app/src/main/assets/www/index.html
+++ b/MemoAnime/platforms/android/app/src/main/assets/www/index.html
@@ -15,11 +15,11 @@
             <h1 class="title">MemoAnime</h1>
             
             <div class="butoon">
-                <a href="./Guide.html"><button type="button" class="btn btn-light btn-block">Guía</button></a>
-                <a href="./Easy.html"><button type="button" class="btn btn-light btn-block">Fácil</button></a>
-                <a href="./Medium.html"><button type="button" class="btn btn-light btn-block">Medio</button></a>
-                <a href="./Hard.html"><button type="button" class="btn btn-light btn-block">Difícil</button></a>
-                <a href="./gallery.html"><button type="button" class="btn btn-light btn-block">Galería</button></a>
+                <a href="./Guia.html"><button type="button" class="btn btn-light btn-block">Guía</button></a>
+                <a href="./Facil.html"><button type="button" class="btn btn-light btn-block">Fácil</button></a>
+                <a href="./Medio.html"><button type="button" class="btn btn-light btn-block">Medio</button></a>
+                <a href="./Dificil.html"><button type="button" class="btn btn-light btn-block">Difícil</button></a>
+                <a href="./Galeria.html"><button type="button" class="btn btn-light btn-block">Galería</button></a>
             </div>
         </div>           
     </body>
