--- a/MemoAnime/platforms/android/app/src/main/assets/www/Galeria.html
+++ b/MemoAnime/platforms/android/app/src/main/assets/www/Galeria.html
@@ -5,9 +5,9 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Galería</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/gallery.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/easy.css'>
-    <script type="text/javascript" src="js/galeria.js"></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/Galeria.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/Facil.css'>
+    <script type="text/javascript" src="js/Galeria.js"></script>
 </head>
 <body>
     <div class="gallery">
