--- a/MemoAnime/platforms/android/app/src/main/assets/www/Guia.html
+++ b/MemoAnime/platforms/android/app/src/main/assets/www/Guia.html
@@ -6,10 +6,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>MemoAnime Guía</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/easy.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/guide.css'>
-    <script type="text/javascript" src="js/easy.js"></script>
-    <script type="text/javascript" src="js/json.js"></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/Facil.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/Guia.css'>
 
 </head>
 
