--- a/MemoAnime/www/Dificil.html
+++ b/MemoAnime/www/Dificil.html
@@ -5,10 +5,13 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <title>MemoAnime Fácil</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/easy.css'>
-    <script type="text/javascript" src="js/easy.js"></script>
+    <title>Dificil</title>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/hard.css'>
+    <script type="text/javascript" src="js/Dificil.js"></script>
+    <script type="text/javascript" src="js/Logica.js"></script>
     <script type="text/javascript" src="js/json.js"></script>
+
+
 </head>
 
 <body>
@@ -16,7 +19,7 @@
         <a class="navbar-brand" href="./index.html">
           <img src="./img/icon/back.png" width="30" height="30" alt="Return button">
         </a>
-        <h1 class="title">Fácil</h1>
+        <h1 class="title">Difícil</h1>
     </div>
     
     <div class="cronometro">
@@ -39,7 +42,7 @@
         <button id="again" class="boton" onclick="again"></button>
         <script type="text/javascript">
             document.getElementById("again").onclick = function () {
-                location.href = "Easy.html";
+                location.href = "Hard.html";
             };
         </script>
         <button id="cards" class="boton"  onclick="cards();"></button>
