--- a/MemoAnime/www/Facil.html
+++ b/MemoAnime/www/Facil.html
@@ -5,12 +5,11 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <title>Medium</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/medium.css'>
-    <script type="text/javascript" src="js/medium.js"></script>
+    <title>MemoAnime Fácil</title>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/Facil.css'>
+    <script type="text/javascript" src="js/Facil.js"></script>
+    <script type="text/javascript" src="js/Logica.js"></script>
     <script type="text/javascript" src="js/json.js"></script>
-
-
 </head>
 
 <body>
@@ -18,7 +17,7 @@
         <a class="navbar-brand" href="./index.html">
           <img src="./img/icon/back.png" width="30" height="30" alt="Return button">
         </a>
-        <h1 class="title">Medium</h1>
+        <h1 class="title">Fácil</h1>
     </div>
     
     <div class="cronometro">
@@ -41,7 +40,7 @@
         <button id="again" class="boton" onclick="again"></button>
         <script type="text/javascript">
             document.getElementById("again").onclick = function () {
-                location.href = "Medium.html";
+                location.href = "Easy.html";
             };
         </script>
         <button id="cards" class="boton"  onclick="cards();"></button>
