media traduccion a español

--- a/MemoAnime/www/Dificil.html
+++ b/MemoAnime/www/Dificil.html
@@ -5,8 +5,8 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <title>Dificil</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/hard.css'>
+    <title>Difícil</title>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/Dificil.css'>
     <script type="text/javascript" src="js/Dificil.js"></script>
     <script type="text/javascript" src="js/Logica.js"></script>
     <script type="text/javascript" src="js/json.js"></script>
