--- a/MemoAnime/www/Cartas.html
+++ b/MemoAnime/www/Cartas.html
@@ -6,10 +6,10 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>MemoAnime Cartas</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='css/easy.css'>
-  <link rel="stylesheet" type="text/css" href="css/containers.css">
-  <script type="text/javascript" src="js/cards.js"></script>
-  <script type="text/javascript" src="js/jsonCards.js"></script>
+  <link rel='stylesheet' type='text/css' media='screen' href='css/Facil.css'>
+  <link rel="stylesheet" type="text/css" href="css/Cartas.css">
+  <script type="text/javascript" src="js/Cartas.js"></script>
+  <script type="text/javascript" src="js/Personajes.js"></script>
 
 
 </head>
@@ -22,9 +22,9 @@
     <h1 class="title">Cartas</h1>
 
   </div>
-  <section id="idcards">
+  <section id="idcartas">
 
-    <script>fillCards();</script>
+    <script>llenarCartas();</script>
     
 
   </section>
