--- a/MemoAnime/www/Guia.html
+++ b/MemoAnime/www/Guia.html
@@ -19,23 +19,19 @@
         <h1 class="title">Guía</h1>
     </div>
     <section>
-    <p>MemoSpace is a memory game that helps the brain practice short-term memory. The goal of the game is to try
-      to find equal cards in a series of cards with different figures in each of them, which are even that is each drawomg os repeated.
+    <p>MemoAnime es un juego de memoria que ayuda al cerebro a practicar la memoria a corto plazo. El objetivo del juego es intentar
+             para encontrar cartas iguales en una serie de cartas con diferentes figuras en cada una de ellas, que son incluso que cada dibujo se repite.
     </p>
-    <h2>Instructions</h2>
-    <p>1- At the beginning of the game, all the cards are face down</p>
-    <p>2- The game player flips 2 cards</p>
-    <p>Case 1: The cards are different, the system turns them around</p>
-    <p>Case 2: The cards are the same, the system leaves them face up because the player has made a combination</p>
-    <p>3- Step 2 is repeated until there are no more cards face down on the table</p>
-    <p>4- Win the game by completing all the pairs</p>
+    <h2>Instrucciones</h2>
+    <p>1- Al comienzo del juego, todas las cartas están boca abajo.</p>
+    <p>2- El jugador voltea 2 cartas</p>
+    <p>Caso 1: las tarjetas son diferentes, el sistema las da vuelta</p>
+    <p>Caso 2: las cartas son las mismas, el sistema las deja boca arriba porque el jugador ha hecho una combinación</p>
+    <p>3- El paso 2 se repite hasta que no haya más cartas boca abajo sobre la mesa</p>
+    <p>4- Gana el juego completando todas las parejas</p>
 
-    <h2>For all public</h2>
-    <p>It is a game designed for the whole family, but as you can see practically anyone can take advantage of the memo
-      from those who only seek to entertain themselves, to those who need to study for some test or who want to improve their mental 
-      capacity. It is a form healthy and fun entertainment that has remained in effect for a long time and is likely to continue
-      that way in the future
-    </p>
+    <h2>Para todo público</h2>
+    
   </section>
     <footer>
       <p></p>
