--- a/MemoAnime/www/Medio.html
+++ b/MemoAnime/www/Medio.html
@@ -5,8 +5,8 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <title>Medium</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/medium.css'>
+    <title>Medio</title>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/Medio.css'>
     <script type="text/javascript" src="js/Medio.js"></script>
     <script type="text/javascript" src="js/Logica.js"></script>
     <script type="text/javascript" src="js/json.js"></script>
@@ -19,7 +19,7 @@
         <a class="navbar-brand" href="./index.html">
           <img src="./img/icon/back.png" width="30" height="30" alt="Return button">
         </a>
-        <h1 class="title">Medium</h1>
+        <h1 class="title">Medio</h1>
     </div>
     
     <div class="cronometro">
