galeria totalmente funcional

--- a/MemoAnime/platforms/android/app/src/main/assets/www/Galeria.html
+++ b/MemoAnime/platforms/android/app/src/main/assets/www/Galeria.html
@@ -6,20 +6,17 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Galería</title>
     <link rel='stylesheet' type='text/css' media='screen' href='css/Galeria.css'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/Facil.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/General.css'>
     <script type="text/javascript" src="js/Galeria.js"></script>
 </head>
 <body>
-    <div class="gallery">
         <div class="navbar">
             <a class="navbar-brand" href="./index.html">
               <img src="./img/icon/back.png" width="30" height="30" alt="Return button">
             </a>
             <h1 class="titleG">Galería</h1>
         </div>
-        <div class="line"></div>
-        <div class="container-image" id="container-image"></div>
-    </div>
+    <div class="line"></div>
     <section id="idcartas"></section>
     <script>cartas();</script>
     <footer>
