--- a/MemoAnime/platforms/android/app/src/main/assets/www/Personaje.html
+++ b/MemoAnime/platforms/android/app/src/main/assets/www/Personaje.html
@@ -4,21 +4,22 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <title>Galería</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/Galeria.css'>
+    <title>Personaje</title>
     <link rel='stylesheet' type='text/css' media='screen' href='css/General.css'>
-    <script type="text/javascript" src="js/Galeria.js"></script>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/Personaje.css'>
+    <script type="text/javascript" src="js/InformacionPersonaje.js"></script>
+    <script type="text/javascript" src="js/Personajes.js"></script>
 </head>
 <body>
         <div class="navbar">
-            <a class="navbar-brand" href="./index.html">
+            <a class="navbar-brand" href="./Galeria.html">
               <img src="./img/icon/back.png" width="30" height="30" alt="Return button">
             </a>
-            <h1 class="titleG">Galería</h1>
+            <h1 class="titleG">Personaje</h1>
         </div>
     <div class="line"></div>
-    <section id="idcartas"></section>
-    <script>cartas();</script>
+    <section id="idpersonaje"></section>
+    <script>llenarInformacion();</script>
     <footer>
         <p></p>
     </footer>
