--- a/MemoAnime/www/Cartas.html
+++ b/MemoAnime/www/Cartas.html
@@ -6,8 +6,8 @@
   <meta http-equiv='X-UA-Compatible' content='IE=edge'>
   <title>MemoAnime Cartas</title>
   <meta name='viewport' content='width=device-width, initial-scale=1'>
-  <link rel='stylesheet' type='text/css' media='screen' href='css/Facil.css'>
-  <link rel="stylesheet" type="text/css" href="css/Cartas.css">
+  <link rel="stylesheet" type="text/css" media='screen' href="css/Cartas.css">
+  <link rel='stylesheet' type='text/css' media='screen' href='css/General.css'>
   <script type="text/javascript" src="js/Cartas.js"></script>
   <script type="text/javascript" src="js/Personajes.js"></script>
 
@@ -22,6 +22,7 @@
     <h1 class="title">Cartas</h1>
 
   </div>
+  <div class="line"></div>
   <section id="idcartas">
 
     <script>llenarCartas();</script>
