--- a/MemoAnime/www/Medio.html
+++ b/MemoAnime/www/Medio.html
@@ -7,6 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>Medio</title>
     <link rel='stylesheet' type='text/css' media='screen' href='css/Medio.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/General.css'>
     <script type="text/javascript" src="js/Medio.js"></script>
     <script type="text/javascript" src="js/Logica.js"></script>
     <script type="text/javascript" src="js/json.js"></script>
@@ -21,6 +22,7 @@
         </a>
         <h1 class="title">Medio</h1>
     </div>
+    <div class="line"></div>
     
     <div class="cronometro">
         <div id="hms"></div>
