--- a/MemoAnime/platforms/android/app/src/main/assets/www/Dificil.html
+++ b/MemoAnime/platforms/android/app/src/main/assets/www/Dificil.html
@@ -5,8 +5,9 @@
     <meta charset='utf-8'>
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <title>Dificil</title>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/hard.css'>
+    <title>Difícil</title>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/Dificil.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/General.css'>
     <script type="text/javascript" src="js/Dificil.js"></script>
     <script type="text/javascript" src="js/Logica.js"></script>
     <script type="text/javascript" src="js/json.js"></script>
@@ -21,6 +22,7 @@
         </a>
         <h1 class="title">Difícil</h1>
     </div>
+    <div class="line"></div>
     
     <div class="cronometro">
         <div id="hms"></div>
