--- a/MemoAnime/www/Facil.html
+++ b/MemoAnime/www/Facil.html
@@ -7,6 +7,7 @@
     <meta name='viewport' content='width=device-width, initial-scale=1'>
     <title>MemoAnime Fácil</title>
     <link rel='stylesheet' type='text/css' media='screen' href='css/Facil.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/General.css'>
     <script type="text/javascript" src="js/Facil.js"></script>
     <script type="text/javascript" src="js/Logica.js"></script>
     <script type="text/javascript" src="js/json.js"></script>
@@ -19,6 +20,7 @@
         </a>
         <h1 class="title">Fácil</h1>
     </div>
+    <div class="line"></div>
     
     <div class="cronometro">
         <div id="hms"></div>
