--- a/MemoAnime/www/Guia.html
+++ b/MemoAnime/www/Guia.html
@@ -6,8 +6,8 @@
     <meta http-equiv='X-UA-Compatible' content='IE=edge'>
     <title>MemoAnime Guía</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='css/Facil.css'>
     <link rel='stylesheet' type='text/css' media='screen' href='css/Guia.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='css/General.css'>
 
 </head>
 
@@ -18,6 +18,7 @@
         </a>
         <h1 class="title">Guía</h1>
     </div>
+    <div class="line"></div>
     <section>
     <p>MemoAnime es un juego de memoria que ayuda al cerebro a practicar la memoria a corto plazo. El objetivo del juego es intentar
              para encontrar cartas iguales en una serie de cartas con diferentes figuras en cada una de ellas, que son incluso que cada dibujo se repite.
